# pakelesir

./: .gitignore  Cargo.toml  README.md  dev-priv.sh  dev.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  flow-dissector-goldens.yml
docs/superpowers/plans/: 2026-07-19-edsl-authoritative-decoupling.md  2026-07-19-slice3-dissector.md  2026-07-19-slice5-switch.md  2026-07-19-slice6-authoring-surface.md  2026-07-20-flow-dissector-rung1.md  2026-07-20-flow-dissector-rung2.md
examples/eth_ipv4_tcp/: README.md  dissector.lua  doc.md  graph.dot  ir.json  vectors.pcap
examples/eth_ipvx_l4/: eth_ipvx_l4.py
examples/linux_flow_dissector/: README.md
oracle/flow_dissector/factory/: capture.c  (+3 more)
py/: README.md  pyproject.toml
py/src/pakeles/: __init__.py  _expr.py  _header.py  _states.py  fmt.py
py/src/pakeles/_pb/: __init__.py  ir_pb2.py  ir_pb2.pyi  testvec_pb2.py  testvec_pb2.pyi
py/src/pakeles/examples/: __init__.py  eth_ipv4_tcp.py
py/tests/: test_conformance.py  test_expr.py  test_instance.py
scripts/: gen-examples.sh
src/: builder.rs  cli.rs  docgen.rs  examples.rs  lib.rs  testvec.rs  viz.rs
src/codegen/: c.rs  lua.rs  mod.rs  p4.rs
src/interp/: bits.rs  mod.rs
src/ir/: mod.rs  validate.rs
src/oracle/: bmv2.rs  flow_dissector.rs  mod.rs
src/snapshots/: pakeles__docgen__tests__markdown_snapshot.snap  pakeles__examples__tests__example_json_snapshot.snap  pakeles__viz__tests__dot_snapshot.snap
src/symex/: cov.rs  engine.rs  lint.rs  mod.rs  solver.rs  testgen.rs  z3solver.rs
testdata/: eth_ipv4_tcp.vectors.json
(+12 files in other folders)
