[package]
name = "pakeles"
version = "0.1.0"
edition = "2021"
default-run = "pakeles"

[dependencies]
prost = "0.13"
pbjson = "0.7"
pbjson-types = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
pcap-parser = "0.16"
clap = { version = "4", features = ["derive"] }
z3 = { version = "0.12", optional = true }

[features]
default = ["symex"]
symex = ["dep:z3"]

[[bin]]
name = "gen_examples"
required-features = ["symex"]

[dev-dependencies]

[build-dependencies]
prost-build = "0.13"
pbjson-build = "0.7"
